# dip-buy-engine

./: README.md  SPEC.md  pyproject.toml  requirements.txt
config/: allocation_rules.yaml  buy_rules.yaml  classification_overrides.yaml  core_recurring_contributions.yaml  market_reference.yaml  portfolio_policy.yaml  tickers.yaml
data/history/codex_patch_requests/: 2026_03_codex_patch_request.yaml
data/history/computations/: 2026_03_computation.yaml  2026_04_computation.yaml  2026_05_computation.yaml
data/history/diffs/: 2026_03_python_vs_chatgpt.yaml
data/history/prompts/: 2026_03_monthly_review_prompt.md
data/normalized/: snapshot_2026_03.yaml  snapshot_2026_04.yaml  snapshot_2026_05.yaml
prompts/: moneyforward_normalization_prompt.md
prompts/templates/: codex_patch_template.md  monthly_review_template.md
src/monthly_limit_order_review/: __init__.py  candidate_metrics.py  cli.py  codex_patch_builder.py  diff_analyzer.py  exposure_metrics.py  market_data.py  models.py  portfolio.py  portfolio_metrics.py  prompt_builder.py  prompt_renderer.py  readme_portfolio.py  review_parser.py  rules.py  snapshot_loader.py  storage.py  thesis_metrics.py  utils.py  validation.py
tests/: conftest.py  test_candidate_metrics.py  test_cli.py  test_codex_patch_builder.py  test_diff_analyzer.py  test_exposure_metrics.py  test_market_data.py  test_portfolio.py  test_prompt_builder.py  test_readme_portfolio.py  test_regression_2026_03.py  test_review_parser.py  test_rules.py  test_snapshot_loader.py  test_thesis_metrics.py  test_utils.py  test_validation.py
(+1 files in other folders)
